[49460] Enable Primer's high-contrast mode (fix jumpy back arrow in side bar menu while hovering) (#13983)
add a transparent border arround the back arrow so while hovering and adding a border it wont jump again

--- a/frontend/src/global_styles/layout/_main_menu.sass
+++ b/frontend/src/global_styles/layout/_main_menu.sass
@@ -187,6 +187,7 @@ $arrow-left-width: 40px
   border-radius: 3px
   padding-left: 14px
   padding-right: 14px
+  border: 1px solid transparent
   &:hover, &:focus, &:active
     @include main-menu-hover
 
